bad/if_cond_void.example_compiler_output
ERROR
[1mbad/if_cond_void.lat:4:6: [1;31merror: [0;1mif condition has to be of type `boolean`, not `void`[m
	if (vfunc()) {}
	    [1;32m^[m
